Joda-Time version 2.8.3
-----------------------

Joda-Time is a date and time handling library that seeks to replace the JDK
Date and Calendar classes.

This release contains enhancements, bug fixes and a time zone update.
The release runs on JDK 5 or later.

Joda-Time is licensed under the business-friendly Apache License Version 2.
This is the same license as all of Apache, plus other open source projects such as Spring.

**  Please also check out our related projects   **
** http://www.joda.org/joda-time/related.html **


Changes in 2.8.3
================
- Faster parsing of time-zone identifiers [#282]

- Added Interval.parseWithOffset(String) [#299, #296]
  Provides a way to parse the fixed offset in an interval string

- Clarify that PeriodFormatterBuilder is in an invalid state once built [#309]


Changes in 2.8.2
================
- DateTimeZone data updated to version 2015f


Changes in 2.8.1
================
See http://www.joda.org/joda-time/upgradeto281.html


Changes in 2.8.0
================

See http://www.joda.org/joda-time/upgradeto280.html


Scala
-----
Joda-Time uses annotations from Joda-Convert.
In the Java programming language, this dependency is optional, however in Scala it is not.
Scala users must manually add the Joda-Convert v1.2 dependency.


Feedback
--------
Feedback is best received using GitHub issues and Pull Requests.
https://github.com/JodaOrg/joda-time/

Feedback is also welcomed via the joda-interest mailing list.

The Joda team
http://www.joda.org/joda-time/